k8s/kratos-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: kratos-service
spec:
  selector:
    app: kratos
  ports:
  - name: kratos-public
    port: 80
    targetPort: kratos-public
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos
  namespace: default
  labels:
    app: kratos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kratos
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: kratos
### Container settings
    spec:
      # nodeSelector:
      #   gts: "add"
      # tolerations:
      # - key: "gtsgroup"
      #   operator: "Equal"
      #   value: "gtsGroup"
      #   effect: "NoSchedule"
      securityContext:
        runAsUser: 0
        # fsGroup: 0
          # fsGroup: 10000
          # runAsUser: 10000
          # runAsGroup: 10000
      containers:
      - image: konst/kratos
        name: kratos
        command:
          - kratos
          - serve 
          - -c 
          - /etc/config/kratos/kratos.yml
          - --dev 
          - --watch-courier
        resources:
          requests:
            memory: "64Mi"
            cpu: "64m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        imagePullPolicy: Always
        ports:
        - containerPort: 4433 # public
          name: kratos-public
        - containerPort: 4434 # admin
          name: kratos-admin
        # readinessProbe:
        #   httpGet:
        #     path: /v1_0/health
        #     port: 8888
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        #   successThreshold: 1
### Set environment
        volumeMounts:
          - name: kratos-sqlite
            mountPath: /home/ory/sqlite/
          - name: kratos-config
            mountPath: /etc/config/kratos/
            readOnly: true
      volumes:
        - name: kratos-sqlite
          persistentVolumeClaim:
            claimName: kratos-migrate-claim1
        - name: kratos-config
          configMap:
            # Provide the name of the ConfigMap you want to mount.
            name: kratos-configmap
            # An array of keys from the ConfigMap to create as files
            items:
            - key: kratos.yml
              path: kratos.yml
            - key: identity.schema.json
              path: identity.schema.json
