k8s/kratos-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: kratos-ui
spec:
  selector:
    app: kratos-ui
  ports:
  - name: kratos-ui-publ
    port: 80
    targetPort: kratos-ui-publ
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos-ui
  namespace: default
  labels:
    app: kratos-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kratos-ui
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: kratos-ui
### Container settings
    spec:
      # nodeSelector:
      #   gts: "add"
      # tolerations:
      # - key: "gtsgroup"
      #   operator: "Equal"
      #   value: "gtsGroup"
      #   effect: "NoSchedule"
      containers:
      - image: oryd/kratos-selfservice-ui-node:latest
        name: kratos-ui
        resources:
          requests:
            memory: "64Mi"
            cpu: "64m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000 # public
          name: kratos-ui-publ
        # readinessProbe:
        #   httpGet:
        #     path: /v1_0/health
        #     port: 8888
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        #   successThreshold: 1
### Set environment
